# rosin

./: Cargo.toml  README.md  build.rs  flake.nix  justfile  pi.ld  run.sh  rust-toolchain.toml  x86_64-rosin.json
.cargo/: config  config.toml
chainload-pull/: Cargo.toml  pi.ld
chainload-pull/src/: gpio.rs  lib.rs  main.rs  uart.rs
chainload-push/: Cargo.toml
chainload-push/.cargo/: config.toml
chainload-push/src/: main.rs
device-tree/: Cargo.toml
device-tree/src/: blob.rs  lib.rs
kernel/: Cargo.toml  build.rs  pi.ld
kernel-core/: Cargo.toml
kernel-core/src/: bitset.rs  irq.rs  lib.rs  mem.rs  mmu.rs  sync.rs  time.rs  unit.rs
kernel-core/src/dev/bcm2837b0/: gpio.rs
kernel-core/src/device/: bcm2837b0.rs
kernel-core/src/device/bcm2837b0/: mini.rs
kernel-core/src/mem/: alloc.rs  page.rs
kernel/src/: dev.rs  lib.rs  main.rs  time.rs
kernel/src/dev/: bcm2837b0.rs  tree.rs
kernel/src/dev/bcm2837b0/: clock.rs
src/: dev.rs  fdt.rs  gdt.rs  heap.rs  idt.rs  interrupt.rs  irq.rs  lib.rs  main.rs  mem.rs  mmu.rs  print.rs  qemu.rs  serial.rs  test.rs  time.rs  unit.rs  util.rs  vga.rs
src/dev/: bcm2837b0.rs
src/dev/bcm2837b0/: gpio.rs  ic.rs
src/device/: bcm2837b0.rs
src/device/bcm2837b0/: uart.rs
src/heap/: bump.rs
src/vga/: buffer.rs  color.rs  screen.rs
tests/: boot.rs  heap.rs  panic.rs  stack_overflow.rs
