[package]
name = "rosin"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.11.1"

[package.metadata.bootimage]
test-success-exit-code = 33
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
]
