[package]
name = "rosin"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.5.0"
pic8259_simple = "0.2.0"
rlibc = "1.0.0"
spin = "0.5.2"
uart = { version = "0.2.7", package = "uart_16550" }
volatile = "0.2.6"
x86_64 = "0.11.1"

[package.metadata.bootimage]
test-success-exit-code = 33
test-timeout = 60
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display", "none",
    "-serial", "stdio",
]

[[test]]
name = "panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
