[workspace]
resolver = "3"
members = [
    "chainload-pull",
    "chainload-push",
    "device-tree",
    "kernel",
]

[workspace.dependencies]
aarch64-cpu = "10.0"
arrayvec = { version = "0.7", default-features = false }
device-tree.path = "device-tree"
elf = { version = "0.8", default-features = false }
tock-registers = "0.9"
